Fix minor layout problems

--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ h2 {
 #scores {
     display: flex;
     justify-content: space-around;
+    margin-bottom: -50px;
 }
 
 h3 {
@@ -197,8 +198,6 @@ footer {
 }
 
 #buttonReset {
-    height: 80px;
-    width: 200px;
     border-color: greenyellow;
     color: greenyellow;
     font-size: x-large;
@@ -211,7 +210,7 @@ footer {
     margin: 0px 10px;
     border-radius: 15px;
     width: 250px;
-    height: 100px;
+    height: 80px;
     text-shadow: 0px 0px 10px;
     cursor: pointer;
     transition-duration: 0.7s;
